--- a/NET_and_MySQL.csproj
+++ b/NET_and_MySQL.csproj
@@ -50,6 +50,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="dgv_data.cs" />
+    <Compile Include="Form11-add.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form11-add.Designer.cs">
+      <DependentUpon>Form11-add.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form11-edit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form11-edit.Designer.cs">
+      <DependentUpon>Form11-edit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form4.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +110,12 @@
     <Compile Include="Form10.Designer.cs">
       <DependentUpon>Form10.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form11.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form11.Designer.cs">
+      <DependentUpon>Form11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form8.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form11-add.resx">
+      <DependentUpon>Form11-add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form11-edit.resx">
+      <DependentUpon>Form11-edit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form4.resx">
       <DependentUpon>Form4.cs</DependentUpon>
     </EmbeddedResource>
@@ -141,6 +165,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form10.resx">
       <DependentUpon>Form10.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form11.resx">
+      <DependentUpon>Form11.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form8.resx">
       <DependentUpon>Form8.cs</DependentUpon>
