--- a/NET_and_MySQL.csproj
+++ b/NET_and_MySQL.csproj
@@ -62,6 +62,18 @@
     <Compile Include="Form11-edit.Designer.cs">
       <DependentUpon>Form11-edit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form12-2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form12-2.Designer.cs">
+      <DependentUpon>Form12-2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form12.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form12.Designer.cs">
+      <DependentUpon>Form12.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form4.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +153,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form11-edit.resx">
       <DependentUpon>Form11-edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form12-2.resx">
+      <DependentUpon>Form12-2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form12.resx">
+      <DependentUpon>Form12.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form4.resx">
       <DependentUpon>Form4.cs</DependentUpon>
