Небольшие правки кода

--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="NET_and_MySQL.Properties.Settings.db_testConnectionString"
+            connectionString="Dsn=caseum.ru;description=caseum.ru;server=caseum.ru;uid=test_user;pwd=test_pass;database=db_test;port=33333"
+            providerName="System.Data.Odbc" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
