--- a/NET_and_MySQL.csproj
+++ b/NET_and_MySQL.csproj
@@ -49,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="db_testDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_testDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="dgv_data.cs" />
     <Compile Include="Form11-add.cs">
       <SubType>Form</SubType>
@@ -205,6 +210,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="db_testDataSet.xsc">
+      <DependentUpon>db_testDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="db_testDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>db_testDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="db_testDataSet.xss">
+      <DependentUpon>db_testDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
